# hypermodern-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .safety-project.ini  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
src/hypermodern_python/: console.py  wikipedia.py
tests/: test_console.py
